<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Monte Notes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name_text">Name</string>
    <string name="pass_text">Password</string>
    <string name="login_button_text">Login</string>
    <string name="students_button_text">Students</string>
    <string name="notes_button_text">Notes</string>
    <string name="menu_text_logout">Logout</string>
    <string name="menu_text_notes">Notes</string>
    <string name="menu_text_students">Students</string>
    <string name="menu_text_addnote">New note</string>
    <string name="menu_text_add">New entry</string>
    <string name="title_activity_student">Student Details</string>
    <string name="title_section6">Praktikum</string>
    <string name="title_section1">Historische Studien</string>
    <string name="title_section2">Feldstudien</string>
    <string name="title_section3">Kunst</string>
    <string name="title_section4">Smileys</string>
    <string name="title_section5">Manager</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_all_students">Students</string>
    <string name="preference_key">eu.oeldin.motes.MY_UNIQUE_PREFERENCE_FILE_KEY</string>

    <string-array name="spinner_array">
        <item>2014/15</item>
        <item>2015/16</item>
    </string-array>
    <string name="title_activity_login">Login</string>
    <string name="lable_welcome">Welcome to Motes</string>
    <string name="lable_welcome_sub">Please select an item from the Application Bar above.</string>
    <string name="lable_no_notes">Sorry, there are no items to display.</string>
</resources>
